Fix (de)serialization issues (#243)
* Refactor annotation targets
* Add a snapshot repository
* Fix de(serialization) issues
* Update GitHub Action build